# pyarrow-stubs

./: README.md  pyproject.toml  setup.cfg
pyarrow-stubs/: __init__.pyi  array.pyi  compute.pyi  conftest.pyi  csv.pyi  dataset.pyi  feather.pyi  field.pyi  filesystem.pyi  fs.pyi  hdfs.pyi  io.pyi  ipc.pyi  lib.pyi  list.pyi  orc.pyi  pandas_compat.pyi  plasma.pyi  scalar.pyi  schema.pyi  serialization.pyi  struct.pyi  table.pyi  types.pyi  util.pyi
pyarrow-stubs/parquet/: core.pyi
pyarrow_stubs_ext/: pyproject.toml
pyarrow_stubs_ext/pyarrow_stubs_ext/: __init__.py  array.py  array.pyi  array_common.py  array_common.pyi  pa_array_types.py
